fixed horizontal overflow issue

--- a/src/css/scrollbar.scss
+++ b/src/css/scrollbar.scss
@@ -3,6 +3,7 @@
         display: none;
     }
     .scrollbar{
+        overflow: visible;
         position: fixed;
         top: 45px;
         bottom: 45px;
